[gd_scene load_steps=10 format=3 uid="uid://dkrkbt3jbrt4"]

[ext_resource type="Script" path="res://gameObjects/levels/win_screen.gd" id="1_7r2or"]
[ext_resource type="FontFile" uid="uid://dbn2auu4o2kfw" path="res://art/fonts/AldotheApache.ttf" id="1_or520"]
[ext_resource type="Texture2D" uid="uid://blbiv7ecqkgij" path="res://art/Custom/tbag.png" id="2_elttw"]
[ext_resource type="Script" path="res://gameObjects/levels/blackOutScreen.gd" id="3_cpts5"]
[ext_resource type="FontFile" uid="uid://dgrxha0i7166g" path="res://art/fonts/digital-7.ttf" id="5_0fk4h"]
[ext_resource type="FontFile" uid="uid://b0g3h2p1jymar" path="res://art/fonts/Ethnocentric Rg It.otf" id="6_wnqnh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tefns"]
atlas = ExtResource("2_elttw")
region = Rect2(0, 0, 32, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmm7q"]
atlas = ExtResource("2_elttw")
region = Rect2(32, 0, 32, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_ja011"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tefns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmm7q")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="winScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7r2or")

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0334792
anchor_top = 0.233519
anchor_right = 0.718063
anchor_bottom = 0.469519
offset_left = -0.280006
offset_top = -0.200012
offset_right = -0.680054
offset_bottom = -0.0800171
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_or520")
theme_override_font_sizes/font_size = 57
text = "Thanks for playing!
If you enjoyed, feel free to let me know in the comments
Any feedback is appreciated!

Be sure to vote for my game for the 2024 Game Off"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.209
anchor_top = 0.09
anchor_right = 0.576396
anchor_bottom = 0.176926
offset_left = -0.280006
offset_top = -0.200005
offset_right = -0.680023
offset_bottom = -0.0800018
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_or520")
theme_override_font_sizes/font_size = 100
text = "Conglaturation!"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02775
anchor_top = 0.506667
anchor_right = 0.769625
anchor_bottom = 0.789889
offset_left = -0.280006
offset_top = -0.200005
offset_right = -0.680023
offset_bottom = -0.0800018
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_or520")
theme_override_font_sizes/font_size = 57
text = "Thanks to these folks for the assets:

Graphics: Pupkin        SFX/Ambience: HoveAudio & Cyrex Studios

And thanks to everyone who playtested the game

				                                                                               -Spinch

"
metadata/_edit_use_anchors_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1650, 278)
scale = Vector2(19.44, 19.44)
sprite_frames = SubResource("SpriteFrames_ja011")
autoplay = "default"
frame_progress = 0.0259868

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.688
anchor_top = 0.78
anchor_right = 0.967
anchor_bottom = 0.955
offset_left = 0.039917
offset_top = -0.400024
offset_right = 0.359863
offset_bottom = -0.400024
theme_override_fonts/font = ExtResource("1_or520")
theme_override_font_sizes/font_size = 80
text = "Main Menu"

[node name="blackOutScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1915.0
offset_bottom = 1074.0
script = ExtResource("3_cpts5")

[node name="ColorRect" type="ColorRect" parent="blackOutScreen"]
layout_mode = 1
anchors_preset = -1
anchor_right = 48.05
anchor_bottom = 27.05
color = Color(0, 0, 0, 1)

[node name="speedrunLabel" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label4" type="Label" parent="speedrunLabel"]
self_modulate = Color(0.756863, 0.682353, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 18.975
anchor_top = 23.175
anchor_right = 26.825
anchor_bottom = 25.825
offset_top = -6.10352e-05
theme_override_fonts/font = ExtResource("5_0fk4h")
theme_override_font_sizes/font_size = 100
text = "MM:SS:ss"

[node name="Label5" type="Label" parent="speedrunLabel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 2.2
anchor_top = 23.5
anchor_right = 18.025
anchor_bottom = 25.4
offset_top = -6.10352e-05
offset_right = -6.10352e-05
offset_bottom = -6.10352e-05
theme_override_fonts/font = ExtResource("6_wnqnh")
theme_override_font_sizes/font_size = 60
text = "Completed In:"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
